docs: add QIDO-RS's response schema
